--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,18 +1,23 @@
 .contact {
     display: flex;
     justify-content: space-between;
-    background-color: #0b0d0c;
+
     color: white;
-    font-family: 'Raleway', 'sans-serif';
+    font-family: Raleway, sans-serif;
+
+    background-color: rgb(11, 13, 12);
 }
+
 .contact-block-text {
-    flex-grow: 1;
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
     justify-content: center;
     align-items: start;
-    font-size: 2rem;
+
     margin-left: 60px;
+
+    font-size: 2rem;
 }
 
 .contact-block-text-other {
@@ -20,17 +25,20 @@
 }
 
 .contact-block-text-main {
+    font-weight: 700;
     font-size: 3rem;
-    font-weight: bold;
 }
 
 .contact-block-text-btn {
-    text-decoration: none;
+    margin-top: 20px;
+    padding: 10px 40px;
+
     color: white;
     text-transform: uppercase;
+    text-decoration: none;
+
     border: 1px solid white;
     border-radius: 40px;
-    padding: 10px 40px;
-    margin-top: 20px;
+
     cursor: pointer;
 }
