--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,4 +1,23 @@
-.contact {
+.visually-hidden {
+    position: absolute;
+
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+
+    white-space: nowrap;
+
+    border: 0;
+
+    overflow: hidden;
+
+    clip: rect(0 0 0 0);
+    clip-path: inset(100%);
+}
+
+
+.banner {
     display: flex;
     justify-content: space-between;
 
@@ -8,7 +27,7 @@
     background-color: rgb(11, 13, 12);
 }
 
-.contact-block-text {
+.banner-block-text {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
@@ -20,16 +39,16 @@
     font-size: 2rem;
 }
 
-.contact-block-text-other {
+.banner-block-text-other {
     margin-bottom: 20px;
 }
 
-.contact-block-text-main {
+.banner-block-text-main {
     font-weight: 700;
     font-size: 3rem;
 }
 
-.contact-block-text-btn {
+.banner-block-text-btn {
     margin-top: 20px;
     padding: 10px 40px;
 
@@ -41,4 +60,127 @@
     border-radius: 40px;
 
     cursor: pointer;
+}
+
+.about {
+    display: flex;
+    gap: 40px;
+    justify-content: space-between;
+
+    margin: 100px;
+
+    color: var(--color-dark);
+    font-family: Raleway, sans-serif;
+
+    background-color: var(--color-light);
+}
+
+.about__banner {
+    width: 50%;
+}
+
+.about__banner-img {
+    height: 100%;
+    max-width: 100%;
+}
+
+.about__block {
+    width: 50%;
+    margin: auto 0;
+
+    text-align: right;
+}
+
+.about__block-title {
+    margin-bottom: 20px;
+
+    color: black;
+    font-weight: 400;
+    font-size: 70px;
+    font-family: var(--font-family-accent);
+    line-height: 100px;
+    text-transform: uppercase;
+}
+
+.about__block-text {
+    margin-bottom: 30px;
+
+    font-weight: 400;
+    font-size: 25px;
+    font-family: var(--font-family-accent);
+    text-align: right;
+}
+
+@media (max-width: 1100px) {
+    .about {
+        margin: 40px;
+    }
+
+    .banner-block-text-btn {
+        padding: 9px 10px;
+    }
+
+    .banner-block-text-main {
+        font-size: 2rem;
+    }
+
+    .about__block-title {
+        font-size: 36px;
+        line-height: 36px;
+    }
+
+    .about__block-text {
+        margin-bottom: 10px;
+
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 920px) {
+    .about__block {
+        margin: auto 0;
+    }
+
+    .banner {
+        flex-direction: column;
+    }
+
+    .banner-block-text {
+        justify-content: center;
+        align-items: center;
+
+        margin: 0;
+
+        background-color: var(--color-dark);
+    }
+
+    .banner-block-text-btn {
+        margin-top: 8px;
+        margin-bottom: 8px;
+    }
+}
+
+@media (max-width: 802px) {
+    .about {
+        gap: 0;
+
+        margin: 5px;
+    }
+}
+
+@media (max-width: 802px) {
+    .about {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .about__block-title {
+        margin: 10px 0;
+
+        text-align: center;
+    }
+
+    .about__block-text {
+        text-align: center;
+    }
 }
